<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <LinearLayout
      android:id="@+id/content_general"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

      <LinearLayout
          android:id="@+id/empty_view_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical"
          android:visibility="gone"
          tools:ignore="UseCompoundDrawables"
          >

        <ImageView
            android:id="@+id/iv_no_result"
            android:layout_width="@dimen/dimen200"
            android:layout_height="@dimen/dimen200"
            app:srcCompat="@drawable/bg_no_data"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/tv_no_result"
            style="@style/TextBoldFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@string/list_no_result"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/internet_error_view_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical"
          android:visibility="gone"
          tools:ignore="UseCompoundDrawables"
          >

        <ImageView
            android:layout_width="@dimen/dimen200"
            android:layout_height="@dimen/dimen200"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/bg_no_internet"
            tools:ignore="ContentDescription"
            />

        <TextView
            style="@style/TextBoldFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

      </LinearLayout>

      <Button
          android:id="@+id/reload_btn"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_margin="@dimen/dimen5"
          android:background="@drawable/btn_primary"
          android:elevation="2dp"
          android:paddingStart="@dimen/dimen36"
          android:paddingEnd="@dimen/dimen36"
          android:text="@string/reload"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:visibility="gone"
          tools:targetApi="lollipop"
          />

      <com.github.ybq.android.spinkit.SpinKitView
          android:id="@+id/progress_bar"
          style="@style/SpinKitView.Large.DoubleBounce"
          android:layout_width="@dimen/dimen70"
          android:layout_height="@dimen/dimen70"
          android:layout_gravity="center"
          app:SpinKit_Color="@color/colorAccent"
          />

    </LinearLayout>

  </LinearLayout>

</layout>