<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="viewModel"
        type="com.mina_mikhail.almatar_task.ui.movie_details.MovieDetailsViewModel"
        />

    <variable
        name="movie"
        type="com.mina_mikhail.almatar_task.data.model.MovieDetails"
        />

    <import type="android.view.View" />
  </data>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#F2F2F2"
      >

    <include
        android:id="@+id/general_include"
        layout="@layout/content_general"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <RelativeLayout
        android:id="@+id/movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

      <FrameLayout
          android:id="@+id/backdrop_container"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen250"
          >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{()-> viewModel.onBackdropClicked(movie.poster_path, movie.backdrop_path)}"
            android:scaleType="center"
            app:load_image="@{movie.backdrop_path}"
            app:progress_view="@{loading}"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/black"
            />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading"
            style="@style/SpinKitView.Large.DoubleBounce"
            android:layout_width="@dimen/dimen40"
            android:layout_height="@dimen/dimen40"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent"
            />

        <include
            android:id="@+id/included_toolbar"
            layout="@layout/toolbar_transparent"
            />

      </FrameLayout>

      <FrameLayout
          android:id="@+id/info_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/backdrop_container"
          android:layout_marginTop="-30dp"
          >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen14"
            android:layout_marginTop="@dimen/dimen5"
            android:layout_marginEnd="@dimen/dimen14"
            android:layout_marginBottom="@dimen/dimen5"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            card_view:cardCornerRadius="@dimen/dimen5"
            card_view:cardElevation="@dimen/dimen2"
            >

          <android.support.v4.widget.NestedScrollView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fillViewport="true"
              android:paddingTop="@dimen/dimen160"
              android:scrollbars="none"
              >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/dimen24"
                android:paddingEnd="@dimen/dimen24"
                android:paddingBottom="@dimen/dimen14"
                >

              <TextView
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/overview"
                  android:textColor="@color/colorAccent"
                  android:textSize="@dimen/text_size14"
                  />

              <View
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginTop="@dimen/dimen2"
                  android:layout_marginBottom="@dimen/dimen5"
                  android:alpha="0.5"
                  android:background="@color/gray"
                  />

              <TextView
                  style="@style/TextMediumFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimen10"
                  android:alpha="0.6"
                  android:text="@{movie.overview}"
                  android:textColor="@color/darkGray"
                  android:textSize="@dimen/text_size12"
                  tools:text="Movie extra details"
                  />

              <TextView
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/status"
                  android:textColor="@color/colorAccent"
                  android:textSize="@dimen/text_size14"
                  />

              <View
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginTop="@dimen/dimen2"
                  android:layout_marginBottom="@dimen/dimen5"
                  android:alpha="0.5"
                  android:background="@color/gray"
                  />

              <TextView
                  style="@style/TextMediumFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimen10"
                  android:alpha="0.6"
                  android:text="@{movie.status}"
                  android:textColor="@color/darkGray"
                  android:textSize="@dimen/text_size12"
                  tools:text="Released"
                  />

              <TextView
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/release_date"
                  android:textColor="@color/colorAccent"
                  android:textSize="@dimen/text_size14"
                  />

              <View
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginTop="@dimen/dimen2"
                  android:layout_marginBottom="@dimen/dimen5"
                  android:alpha="0.5"
                  android:background="@color/gray"
                  />

              <TextView
                  style="@style/TextMediumFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimen10"
                  android:alpha="0.6"
                  android:text="@{movie.releaseDateCasted}"
                  android:textColor="@color/darkGray"
                  android:textSize="@dimen/text_size12"
                  tools:text="12 sep 2019"
                  />

              <TextView
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/spoken_languages"
                  android:textColor="@color/colorAccent"
                  android:textSize="@dimen/text_size14"
                  />

              <View
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginTop="@dimen/dimen2"
                  android:layout_marginBottom="@dimen/dimen5"
                  android:alpha="0.5"
                  android:background="@color/gray"
                  />

              <TextView
                  style="@style/TextMediumFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimen10"
                  android:alpha="0.6"
                  android:text="@{movie.spokenLanguagesStr}"
                  android:textColor="@color/darkGray"
                  android:textSize="@dimen/text_size12"
                  tools:text="English, Italy"
                  />

              <LinearLayout
                  android:id="@+id/budget_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:visibility="gone"
                  >

                <TextView
                    style="@style/TextBoldFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_budget"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size14"
                    />

                <View
                    style="@style/TextBoldFont"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/dimen2"
                    android:layout_marginBottom="@dimen/dimen5"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    />

                <TextView
                    style="@style/TextMediumFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen10"
                    android:alpha="0.6"
                    android:text="@{movie.budgetFormatted}"
                    android:textAllCaps="true"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/text_size12"
                    tools:text="20M"
                    />

              </LinearLayout>

              <TextView
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/production_countries"
                  android:textColor="@color/colorAccent"
                  android:textSize="@dimen/text_size14"
                  />

              <View
                  style="@style/TextBoldFont"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginTop="@dimen/dimen2"
                  android:layout_marginBottom="@dimen/dimen5"
                  android:alpha="0.5"
                  android:background="@color/gray"
                  />

              <TextView
                  style="@style/TextMediumFont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/dimen10"
                  android:alpha="0.6"
                  android:text="@{movie.productionCountriesStr}"
                  android:textColor="@color/darkGray"
                  android:textSize="@dimen/text_size12"
                  tools:text="KSA, USA"
                  />

              <LinearLayout
                  android:id="@+id/production_companies_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:visibility="gone"
                  >

                <TextView
                    style="@style/TextBoldFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/production_companies"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size14"
                    />

                <View
                    style="@style/TextBoldFont"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/dimen2"
                    android:layout_marginBottom="@dimen/dimen5"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/companies_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-6dp"
                    android:clipToPadding="false"
                    />

              </LinearLayout>

            </LinearLayout>

          </android.support.v4.widget.NestedScrollView>

        </android.support.v7.widget.CardView>

      </FrameLayout>

      <LinearLayout
          android:id="@+id/poster_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/backdrop_container"
          android:layout_marginStart="@dimen/dimen36"
          android:layout_marginTop="-65dp"
          android:layout_marginEnd="@dimen/dimen36"
          android:layout_marginBottom="@dimen/dimen5"
          android:orientation="horizontal"
          >

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/dimen130"
            android:layout_height="@dimen/dimen180"
            android:layout_margin="@dimen/dimen5"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            card_view:cardCornerRadius="@dimen/dimen5"
            card_view:cardElevation="@dimen/dimen3"
            >

          <FrameLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="@{()-> viewModel.onPosterClicked(movie.poster_path, movie.backdrop_path)}"
                android:scaleType="center"
                app:load_image="@{movie.poster_path}"
                app:progress_view="@{loadingPoster}"
                app:riv_border_width="0dip"
                app:riv_corner_radius="5dip"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/loading_poster"
                style="@style/SpinKitView.Large.DoubleBounce"
                android:layout_width="@dimen/dimen40"
                android:layout_height="@dimen/dimen40"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/colorAccent"
                />

          </FrameLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen5"
            android:layout_marginTop="@dimen/dimen50"
            android:orientation="vertical"
            >

          <TextView
              style="@style/TextBoldFont"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/dimen2"
              android:text="@{movie.title}"
              android:textColor="@color/black"
              tools:text="Fast and Furious"
              />

          <TextView
              style="@style/TextMediumFont"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/dimen2"
              android:layout_marginBottom="@dimen/dimen10"
              android:alpha="0.6"
              android:text="@{movie.genresInfo}"
              android:textColor="@color/darkGray"
              android:textSize="@dimen/text_size12"
              tools:text="Tv Shows/ Drama"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/dimen10"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              >

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/rate_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_clearRatingEnabled="false"
                app:srb_clickable="false"
                app:srb_drawableEmpty="@drawable/ic_star_empty"
                app:srb_drawableFilled="@drawable/ic_star_fill"
                app:srb_isIndicator="true"
                app:srb_scrollable="false"
                app:srb_starHeight="@dimen/dimen14"
                app:srb_starPadding="@dimen/dimen3"
                app:srb_starWidth="@dimen/dimen14"
                app:srb_stepSize="1"
                />

            <TextView
                style="@style/TextMediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen3"
                android:alpha="0.6"
                android:text="@{`(` + movie.vote_count + `)`}"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/text_size12"
                tools:text="(50)"
                />

          </LinearLayout>

          <TextView
              style="@style/TextMediumFont"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/dimen2"
              android:layout_marginBottom="@dimen/dimen10"
              android:alpha="0.6"
              android:text="@{@string/language + `: ` + movie.original_language}"
              android:textColor="@color/darkGray"
              android:textSize="@dimen/text_size12"
              tools:text="Language: English"
              />

          <TextView
              style="@style/TextMediumFont"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/dimen2"
              android:text="@string/adults_only"
              android:textColor="@color/colorAccent"
              android:textSize="@dimen/text_size12"
              android:visibility="@{movie.adult ? View.VISIBLE : View.GONE, default=gone}"
              />

        </LinearLayout>

      </LinearLayout>

    </RelativeLayout>

  </FrameLayout>

</layout>